changed common to private repo

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,5 @@ edition = "2021"
 thiserror = "1.0"
 itertools = "0.12"
 crc = "3.0"
-common = { git = "https://github.com/NilsJochem/rust-common" }
+common = { git = "ssh://git@github.com/NilsJochem/rust-common" }
 momo = "0.2"
